Crash after importing collada file #30230

Closed
opened 2012-02-17 10:47:03 +01:00 by Marc M · 3 comments

%%%Alter importing a collada file from a google-sketchup export, blender crashes as soon as I zoom out.
The import itself seems to work but changing the view or zooming out crashes blender almost immediately.

Steps to reproduce this bug:
Start Blender with an empty scene
Import attached collada file
Zoom out in object mode

When I do not touch anything, I am able to save the scene to a blend file.
But when I restart blender and open the blend file the error still occurs.

Steps to reproduce this bug:
Open attached blend file
Zoom out in object mode

Blender-Build: Official blender-2.62-release-windows32 (zip)
OS: Win XP (32 bit), SP 3
RAM: 3.5 GB
CPU: Intel Core 2 Duo @ 2.66 GHz
GFX: nVidia Quadro FX 370
%%%

%%%Alter importing a collada file from a google-sketchup export, blender crashes as soon as I zoom out. The import itself seems to work but changing the view or zooming out crashes blender almost immediately. Steps to reproduce this bug: Start Blender with an empty scene Import attached collada file Zoom out in object mode When I do not touch anything, I am able to save the scene to a blend file. But when I restart blender and open the blend file the error still occurs. Steps to reproduce this bug: Open attached blend file Zoom out in object mode Blender-Build: Official blender-2.62-release-windows32 (zip) OS: Win XP (32 bit), SP 3 RAM: 3.5 GB CPU: Intel Core 2 Duo @ 2.66 GHz GFX: nVidia Quadro FX 370 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,

The crash should be fixed with a Blender newer than r44251 (as in the crash that happens when importing the collada-file, the blender-file crash is caused by the original corrupt import of the collada-file); I'm closing this report, but it can be re-opened later by request here or in irc (#blendercoders or #blendercollada).

Thanks for the report!%%%

%%%Hi, The crash should be fixed with a Blender newer than r44251 (as in the crash that happens when importing the collada-file, the blender-file crash is caused by the original corrupt import of the collada-file); I'm closing this report, but it can be re-opened later by request here or in irc (#blendercoders or #blendercollada). Thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30230
No description provided.